# Constellation

./: CMakeLists.txt  ConstellationWidget.cpp  ConstellationWidget.h  DataReader.cpp  DataReader.h  QTRight.pro  main.cpp
